<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textColor="#00FDFDFD" android:id="@+id/txv_id_pac"/>
    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/txv_info_pac" android:textColor="#000000"
            android:textSize="20sp" android:textAlignment="center"/>
    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView12" android:textColor="#00FDFDFD"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="201dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/txt_nom_pac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView14" android:textColor="#D5030303"/>
            <TextView
                    android:text="@string/txt_ape_pac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView15" android:textColor="#D5030303"/>
            <TextView
                    android:text="@string/fec_nac_pac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView16" android:textColor="#D5030303"/>
            <TextView
                    android:text="@string/hijos_pac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView17" android:textColor="#D5030303"/>
            <TextView
                    android:text="@string/seguro_pac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView18" android:textColor="#D5030303"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="214dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/txv_nombres_pac"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/txv_apellidos_pac"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/txv_fecha_nacimiento_pac"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/txv_numero_hijos_pac"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/txv_seguro_pac"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_eliminar_pac" android:layout_weight="1"/>
        <Button
                android:text="@string/btn_actualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_actualizar_pac" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>