<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".actividades.GestionMedicamentos">

    <Button
            android:text="@string/btn_crear_med"
            android:layout_width="181dp"
            android:layout_height="54dp"
            android:id="@+id/btn_crear_medicamento"
            app:layout_constraintStart_toStartOf="@+id/btn_gestion_med"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/btn_gestion_med"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/btn_mapa"
            android:layout_marginBottom="100dp"
    />
    <Button
            android:text="@string/btn_ges_med"
            android:layout_width="170dp"
            android:layout_height="59dp"
            android:id="@+id/btn_gestion_med"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.484"
            android:layout_marginTop="164dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_crear_medicamento" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/btn_mapa"
            android:layout_width="172dp"
            android:layout_height="44dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btn_mapa"
            app:layout_constraintEnd_toEndOf="@+id/btn_crear_medicamento"
            app:layout_constraintStart_toStartOf="@+id/btn_crear_medicamento"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="212dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>