<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".actividades.ActualizarPaciente">

    <TextView
            android:text="@string/txt_nom_pac"
            android:layout_width="118dp"
            android:layout_height="31dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            tools:text="@string/txt_nom_pac"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_nom_pac_act" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="175dp"
            android:layout_height="39dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/fec_nac_pac_act"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="28dp"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="@+id/textView5" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/hijos_pac"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="44dp"
            android:textColor="@android:color/background_dark" android:textStyle="bold" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_hij_pac_act" app:layout_constraintHorizontal_bias="0.0"/>
    <Switch
            android:layout_width="108dp"
            android:layout_height="17dp"
            android:id="@+id/sw_seg_pac_act" android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            app:layout_constraintStart_toEndOf="@+id/txv_id_pac_med" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.403"
            app:layout_constraintTop_toTopOf="@+id/textView3" app:layout_constraintBottom_toBottomOf="@+id/textView3"/>
    <EditText
            android:layout_width="176dp"
            android:layout_height="38dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nom_pac_act"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/txv_info_pac"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintTop_toTopOf="@+id/textView" app:layout_constraintBottom_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/seguro_pac"
            android:layout_width="114dp"
            android:layout_height="31dp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="8dp"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.081" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/sw_seg_pac_act" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="176dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ape_pac_act"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/txt_ape_pac"
            android:layout_width="118dp"
            android:layout_height="41dp"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            tools:text="@string/txt_ape_pac" android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/txt_ape_pac_act" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/fec_nac_pac"
            android:layout_width="119dp"
            android:layout_height="43dp"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="40dp"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/fec_nac_pac_act"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="177dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_hij_pac_act"
            app:layout_constraintStart_toEndOf="@+id/textView12" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintHorizontal_bias="0.383"
            app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="@+id/textView2"/>
    <Button
            android:text="@string/btn_actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="509dp"
            tools:layout_editor_absoluteX="145dp" android:id="@+id/btn_act_pac_conf"/>
</android.support.constraint.ConstraintLayout>